@@ -11,7 +11,7 @@ from config import panda_config
 
 from rucio.client import Client as RucioClient
 from rucio.common.exception import UnsupportedOperation,DataIdentifierNotFound,\
-    FileAlreadyExists,Duplicate,DataIdentifierAlreadyExists
+    FileAlreadyExists,Duplicate,DataIdentifierAlreadyExists,DuplicateRule
 
 
 # change cwd
@@ -451,7 +451,7 @@ class RucioAPI:
             client.add_replication_rule(dids=dids,copies=1,rse_expression=location,weight=None,
                                         lifetime=lifetime, grouping='DATASET', account=owner,
                                         locked=False, notify='N',ignore_availability=True)
-        except Duplicate:
+        except (Duplicate,DuplicateRule):
             pass
         return True
 
