@@ -1,6 +1,7 @@
 Release Notes
 
 * current
+  * using rucio API instead of DaTRI
   * updating lastStart
   * id in fairshare
   * added taskID to getJob
